fix: [PIE-2772]: mini execution graph fixes (#7410)
* fix: hover delay

* fix: cropped mini execution graph

--- a/src/modules/70-pipeline/components/ExecutionCard/MiniExecutionGraph/MiniExecutionGraph.module.scss
+++ b/src/modules/70-pipeline/components/ExecutionCard/MiniExecutionGraph/MiniExecutionGraph.module.scss
@@ -21,10 +21,10 @@ $button-width: 25px;
   }
 
   .graphWrapper {
-    height: $node-height;
-    overflow: hidden;
+    height: calc(#{$node-height} + 8px);
     display: flex;
     max-width: 100%;
+    align-items: flex-end;
 
     &.hasButtons {
       width: calc(100% - #{$button-width});
